# rermius

./: .env.example  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.github/workflows/: release-linux.yml  release-macos.yml  release-unified.yml  release-windows.yml
scripts/: build-common.js  generate-icons.js  prepare-release.js  release.js  release.sh  update-version.js
src/: app.css  app.html
src-tauri/: Cargo.toml  exec.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: file_operations.rs  file_transfer.rs  file_watcher.rs  mod.rs  ssh.rs  telnet.rs  terminal.rs  window.rs
src-tauri/src/core/: error.rs  history.rs  mod.rs  path_utils.rs  session.rs  terminal_events.rs
src-tauri/src/file_watcher/: mod.rs
src-tauri/src/ftp/: mod.rs  session.rs
src-tauri/src/managers/: mod.rs  terminal.rs  transfer.rs
src-tauri/src/pty/: mod.rs  session.rs  shell.rs
src-tauri/src/sftp/: mod.rs  session.rs
src-tauri/src/ssh/: chain.rs  client.rs  config.rs  error.rs  mod.rs  terminal.rs
src-tauri/src/telnet/: client.rs  config.rs  error.rs  login.rs  mod.rs  protocol.rs  session.rs
src-tauri/src/terminal/: factory.rs  mod.rs  session.rs
src/lib/actions/: click-outside.js
src/lib/composables/: index.js  useForm.svelte.js  useHostConnection.svelte.js  useHostManagement.js  useKeyScan.svelte.js  useModal.svelte.js  useSSHConfigScan.svelte.js  useSaveQueue.svelte.js  useSnippetExecution.svelte.js  (+4 more)
src/routes/: +layout.svelte
(+305 files in other folders)
