[package]
name = "rermius"
version = "1.1.2"
description = "A SSH/SFTP/FTP in one"
authors = ["hayho"]
edition = "2021"
repository = "https://github.com/rermius/rermius"
homepage = "https://github.com/rermius/rermius"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal dependencies
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# SSH dependencies (full crypto: RSA, Ed25519, ECDSA)
russh = "0.55"
russh-keys = "0.49"
russh-sftp = "2.0"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# FTP/FTPS
suppaftp = { version = "6", features = ["async-rustls"] }
futures-lite = "2.6"
futures-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"

# System file operations
open = "5"
notify = "6"
tempfile = "3"

